--- a/Salt_Lake_Coronavirus_Analysis.ipynb
+++ b/Salt_Lake_Coronavirus_Analysis.ipynb
@@ -6,7 +6,10 @@
       "name": "Salt-Lake-Coronavirus-Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "mount_file_id": "15_cWyki5ueqi8H620mBZy2YBhyBHFgR_",
+      "authorship_tag": "ABX9TyMdLcbrW2TwU2rTcaNMwWgg",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sorennelson/Salt-Lake-City-Coronavirus-Analysis/blob/master/Salt_Lake_Coronavirus_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -27,6 +40,7 @@
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.ticker as ticker\n",
         "import warnings\n",
+        "from sklearn.linear_model import LinearRegression\n",
         "warnings.filterwarnings(\"ignore\", category=DeprecationWarning) "
       ],
       "execution_count": 0,
@@ -87,7 +101,7 @@
       "metadata": {
         "id": "1dNMr6gY_r7p",
         "colab_type": "code",
-        "outputId": "d1bb1818-e6d0-49d5-f57f-93b56280093b",
+        "outputId": "9e261778-d9b1-48f8-84d0-b464e390e890",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
@@ -106,7 +120,7 @@
         "# plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 55,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -137,18 +151,18 @@
       "metadata": {
         "id": "KoT3GSw6LHDP",
         "colab_type": "code",
+        "outputId": "eec0f59d-2bd6-465d-e1d6-d728b9b7b366",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f0e1160f-f2da-4357-e91c-187bdb733235"
+        }
       },
       "source": [
         "slc = world_population[world_population['city_ascii'] == 'Salt Lake City']\n",
         "slc_pop = int(slc['population'].item())\n",
         "print('Salt Lake City Population:', slc_pop)"
       ],
-      "execution_count": 64,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +213,11 @@
       "metadata": {
         "id": "IRTyO15mUNAs",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "c37c4fe7-1926-4195-e477-20bcc3c9b2b4"
       },
       "source": [
         "corona_city_arr = np.unique(np.array(world_corona_data['Province/State']).astype(str))\n",
@@ -219,8 +237,25 @@
         "      clean_sim_corona_cities.append(value)\n",
         "      break"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Jilin\n",
+            "Portland, OR\n",
+            "San Antonio, TX\n",
+            "Providence, RI\n",
+            "Calgary, Alberta\n",
+            "Edmonton, Alberta\n",
+            "Omaha, NE (From Diamond Princess)\n",
+            "Sarasota, FL\n",
+            "Quebec\n",
+            "Macau\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -315,7 +350,7 @@
       "metadata": {
         "id": "IbToGkSUlFue",
         "colab_type": "code",
-        "outputId": "646313ba-a6d7-4d50-ab1a-7856da8f9345",
+        "outputId": "f5c63e70-fa0c-49f8-a9aa-7de6834e6693",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
@@ -336,7 +371,7 @@
         "plt.legend(fontsize='small')\n",
         "plt.show()"
       ],
-      "execution_count": 108,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -367,7 +402,7 @@
       "metadata": {
         "id": "kj8vUnXeur2g",
         "colab_type": "code",
-        "outputId": "aec04fff-508e-47a9-87ed-02669caf307a",
+        "outputId": "8edbcc42-6179-4c65-bbad-a3ccf9623599",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 655
@@ -405,7 +440,7 @@
         "plt.legend(fontsize='small')\n",
         "plt.show()"
       ],
-      "execution_count": 111,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -462,7 +497,7 @@
       "metadata": {
         "id": "-rtpRS4dqIsS",
         "colab_type": "code",
-        "outputId": "e807a48d-8089-49bb-af5d-8a93934f9693",
+        "outputId": "81f3fd1f-b2ed-469a-96ea-bd10fc7b9e4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -475,7 +510,7 @@
         "sl_slope = (last7[-1] - last7[0])/len(last7)\n",
         "print('Salt Lake trajectory over last 7 days:', sl_slope)"
       ],
-      "execution_count": 100,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,24 +541,27 @@
       },
       "source": [
         "def in_range(city_rows):\n",
-        "  data_rows = city_rows[city_rows['Confirmed'] > 0]\n",
-        "  if len(data_rows) < 7: return False\n",
+        "  data_rows = city_rows #[city_rows['Confirmed'] > 0]\n",
+        "  if len(data_rows) < 7: return None\n",
         "  end_row = 7\n",
         "  while len(data_rows) + 1 > end_row:\n",
         "    cases = np.array(data_rows[end_row-7:end_row]['Confirmed'])\n",
         "    slope = (cases[-1] - cases[0])/len(cases)\n",
-        "    if slope in range(int(sl_slope - 5), int(sl_slope + 6)) and cases[-1] < 500: return True\n",
+        "    if slope in range(int(sl_slope - 5), int(sl_slope + 6)) and cases[-1] < 500: return end_row\n",
         "    end_row += 1\n",
-        "  return False\n",
+        "  return None\n",
         "\n",
         "unique_world_cities = np.unique(np.array(world_corona_data['Province/State']).astype(str))\n",
         "cities_in_range = []\n",
         "cities_in_range_pop = []\n",
+        "cities_in_range_last_day = []\n",
         "\n",
         "for city in unique_world_cities:\n",
         "  city_rows = world_corona_data[world_corona_data['Province/State'] == city]\n",
-        "  if in_range(city_rows):\n",
+        "  date_range = in_range(city_rows)\n",
+        "  if date_range is not None:\n",
         "    cities_in_range.append(city)\n",
+        "    cities_in_range_last_day.append(date_range)\n",
         "    place_pop = np.array(state_pop[state_pop['State'] == city]['Pop'])\n",
         "    if len(place_pop) > 0:\n",
         "      cities_in_range_pop.append(str(round(place_pop[0] / 1000000., 2)))\n",
@@ -538,7 +576,7 @@
       "metadata": {
         "id": "U7Scn6x2wci_",
         "colab_type": "code",
-        "outputId": "bd9f09e1-e930-423d-fa73-eeae4410f355",
+        "outputId": "c7dd8e95-b576-4d0d-9622-31fa8da04d74",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 655
@@ -555,6 +593,7 @@
         "  if len(dates) > longest_city[1]: longest_city = (i, len(dates))\n",
         "cities_in_range[0], cities_in_range[longest_city[0]] = cities_in_range[longest_city[0]], cities_in_range[0]\n",
         "cities_in_range_pop[0], cities_in_range_pop[longest_city[0]] = cities_in_range_pop[longest_city[0]], cities_in_range_pop[0]\n",
+        "cities_in_range_last_day[0], cities_in_range_last_day[longest_city[0]] = cities_in_range_last_day[longest_city[0]], cities_in_range_last_day[0]\n",
         "\n",
         "for i in range(len(cities_in_range)):\n",
         "  city = cities_in_range[i]\n",
@@ -593,7 +632,7 @@
         "plt.legend(title='Place (population)', title_fontsize='medium', fontsize='small')\n",
         "plt.show()"
       ],
-      "execution_count": 102,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -624,6 +663,168 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "z9et4XeFVN_t",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Using places with a similar trajectory, fit a regression line to predict Salt Lake City cases and deaths"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DYMP3hlHU1yK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X = np.zeros((len(cities_in_range), 1+len(np.array(sl_county_data['cases'])))) # [pop, confirmed w/same slope]\n",
+        "Y = np.zeros((len(cities_in_range)))\n",
+        "X_deaths = np.zeros((len(cities_in_range), 1+len(np.array(sl_county_data['cases']))))\n",
+        "Y_deaths = np.zeros((len(cities_in_range)))\n",
+        "\n",
+        "X_wo_o = np.zeros((len(cities_in_range) - 1, 1+len(np.array(sl_county_data['cases'])))) # without outlier New Jersey\n",
+        "Y_wo_o = np.zeros((len(cities_in_range) - 1))\n",
+        "\n",
+        "outlier = False\n",
+        "for i in range(len(cities_in_range)):\n",
+        "  city = cities_in_range[i]\n",
+        "  city_rows = world_corona_data[world_corona_data['Province/State'] == city]\n",
+        "  confirmed = np.array(city_rows['Confirmed'])\n",
+        "  deaths = np.array(city_rows['Deaths'])\n",
+        "\n",
+        "  x = np.zeros((X.shape[1]))\n",
+        "  if cities_in_range_pop[i] != '': x[0] = int(float(cities_in_range_pop[i]) * 1000000)\n",
+        "  # x[1] = len(confirmed)\n",
+        "  x[0 - cities_in_range_last_day[i]:] = confirmed[:cities_in_range_last_day[i]]\n",
+        "  X[i] = x\n",
+        "  Y[i] = confirmed[-1]\n",
+        "\n",
+        "  x_deaths = x.copy()\n",
+        "  x_deaths[0 - cities_in_range_last_day[i]:] = deaths[:cities_in_range_last_day[i]]\n",
+        "  X_deaths[i] = x_deaths\n",
+        "  Y_deaths[i] = deaths[-1]\n",
+        "\n",
+        "  if city == 'New Jersey': \n",
+        "    outlier = True\n",
+        "    continue\n",
+        "  j = i if not outlier else i - 1\n",
+        "  X_wo_o[j] = x\n",
+        "  Y_wo_o[j] = confirmed[-1]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NZ3PoePQrG3e",
+        "colab_type": "text"
+      },
+      "source": [
+        "Anywhere we don't have a population replace with median population"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "05uDHSTkrGQQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pop_avg = round(np.median(X[X[:,0] > 0][:,0]),2)\n",
+        "for i in range(len(cities_in_range)):\n",
+        "  if X[i,0] == 0: \n",
+        "    X[i,0] = pop_avg\n",
+        "    X_deaths[i,0] = pop_avg\n",
+        "\n",
+        "pop_avg_wo_o = round(np.median(X_wo_o[X_wo_o[:,0] > 0][:,0]),2)\n",
+        "for i in range(X_wo_o.shape[0]):\n",
+        "  if X_wo_o[i,0] == 0: \n",
+        "    X_wo_o[i,0] = pop_avg"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vkjHkc5wrKGJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Fit Regression lines"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gI2Jy_v3rKox",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "reg = LinearRegression().fit(X, Y)\n",
+        "reg_deaths = LinearRegression().fit(X_deaths, Y_deaths)\n",
+        "reg_wo_o = LinearRegression().fit(X_wo_o, Y_wo_o)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c7MVXtrGrgek",
+        "colab_type": "text"
+      },
+      "source": [
+        "Predict for Salt Lake"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Waba-lQaiOWp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "03bf42db-764c-47af-80f0-175a014e0be3"
+      },
+      "source": [
+        "sl_cases = np.array(sl_county_data['cases'])\n",
+        "SL = np.zeros((1, X.shape[1]))\n",
+        "SL[0,0] = slc_pop\n",
+        "SL[0,0-len(sl_cases):] = sl_cases\n",
+        "\n",
+        "print('Expected number of cases:', round(reg.predict(SL)[0],2))\n",
+        "print(\"Expected number of cases if we don't include the outlier:\", round(reg_wo_o.predict(SL)[0],2))\n",
+        "\n",
+        "sl_deaths = np.array(sl_county_data['deaths'])\n",
+        "SL_deaths = np.zeros((1, X.shape[1]))\n",
+        "SL_deaths[0,0] = slc_pop\n",
+        "SL_deaths[0,0-len(sl_deaths):] = sl_deaths\n",
+        "\n",
+        "print('Expected number of deaths:', round(reg_deaths.predict(SL_deaths)[0],2))"
+      ],
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Expected number of cases: 5268.24\n",
+            "Expected number of cases if we don't include the outlier: 3377.29\n",
+            "Expected number of deaths: 11.32\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "kFKWho--JlZR",
         "colab_type": "text"
       },
@@ -640,7 +841,7 @@
       "source": [
         "Although having relatively not too large of a population, Salt Lake's cases are growing at the same rate as Texas when it had under 500 cases. In places with a similar population, other than Quebec, Salt Lake has slightly more cases. However, Salt Lake has no deaths. \n",
         "\n",
-        "Even though other places that were at the same pace under 500 cases have mostly grown immensely, since Salt Lake has a much smaller population and quarantined rather quickly in comparison, my analysis leads me to believe that it will only have a moderate amount of cases."
+        "Even though other places that were at the same pace under 500 cases have mostly grown immensely, since Salt Lake has a much smaller population and quarantined rather quickly in comparison, my analysis leads me to believe that it will only have a moderate amount of cases (\\~5,000) and very few deaths (< 15)."
       ]
     }
   ]
