--- a/Salt_Lake_Coronavirus_Analysis.ipynb
+++ b/Salt_Lake_Coronavirus_Analysis.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "15_cWyki5ueqi8H620mBZy2YBhyBHFgR_",
-      "authorship_tag": "ABX9TyMdLcbrW2TwU2rTcaNMwWgg",
+      "authorship_tag": "ABX9TyMSpe+hwY38wNpRjpxyKtEI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,11 +213,7 @@
       "metadata": {
         "id": "IRTyO15mUNAs",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 187
-        },
-        "outputId": "c37c4fe7-1926-4195-e477-20bcc3c9b2b4"
+        "colab": {}
       },
       "source": [
         "corona_city_arr = np.unique(np.array(world_corona_data['Province/State']).astype(str))\n",
@@ -233,29 +229,11 @@
         "for city in sim_corona_cities:\n",
         "  for value in world_corona_data['Province/State'].values:\n",
         "    if type(value) is str and city in value:\n",
-        "      print(value)\n",
         "      clean_sim_corona_cities.append(value)\n",
         "      break"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Jilin\n",
-            "Portland, OR\n",
-            "San Antonio, TX\n",
-            "Providence, RI\n",
-            "Calgary, Alberta\n",
-            "Edmonton, Alberta\n",
-            "Omaha, NE (From Diamond Princess)\n",
-            "Sarasota, FL\n",
-            "Quebec\n",
-            "Macau\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -667,7 +645,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Using places with a similar trajectory, fit a regression line to predict Salt Lake City cases and deaths"
+        "## Using places with a similar trajectory, fit a regression model to predict Salt Lake's cases and deaths"
       ]
     },
     {
@@ -839,9 +817,19 @@
         "colab_type": "text"
       },
       "source": [
-        "Although having relatively not too large of a population, Salt Lake's cases are growing at the same rate as Texas when it had under 500 cases. In places with a similar population, other than Quebec, Salt Lake has slightly more cases. However, Salt Lake has no deaths. \n",
+        "Although having a much smaller population, Salt Lake's cases are growing at the same rate as Texas when it had under 500 cases. In places with a similar population, other than Quebec, Salt Lake has slightly more cases. However, Salt Lake has no deaths. \n",
         "\n",
-        "Even though other places that were at the same pace under 500 cases have mostly grown immensely, since Salt Lake has a much smaller population and quarantined rather quickly in comparison, my analysis leads me to believe that it will only have a moderate amount of cases (\\~5,000) and very few deaths (< 15)."
+        "Even though most other places that were at the same pace under 500 cases have grown immensely, since Salt Lake has a much smaller population and quarantined rather quickly in comparison, my analysis leads me to believe that it will only have a moderate amount of cases (\\~5,000) and very few deaths (< 15)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G_JLzGYwxLF6",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Note, the regression model was only trained on the data that had a similar trend as Salt Lake while under 500 cases. Also, we don't know the final number of cases anywhere, so this is an incomplete model and should be taken as such. Given that, I still believe this to be reasonable estimation of what's to come.*"
       ]
     }
   ]
